--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,74 @@
+* {
+  margin: 0;
+  padding: 0;
+  vertical-align: baseline;
+
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale; */
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  text-align: center;
+  box-sizing: border-box;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  /* font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace; */
+}
+
+#quote-box {
+  display: table;
+  padding: 2em;
+  /* margin: 2em; */
+  width: 100%;
+  max-width: 40rem;
+  /* border: 1px solid black; */
+  border-radius: 3px;
+  background-color: white;
+  justify-content: center;
+}
+
+#text {
+  font-size: 1.75em;
+}
+
+#author {
+  text-align: right;
+}
+
+#buttons {
+  height: auto;
+  width: auto;
+  display: block;
+}
+
+button {
+  /* width: 200px; */
+  padding: 10px;
+  color: white;
+  border-style: none;
+  border-radius: 3px;
+  float: right;
+}
+
+card {
+  color: blue;
+}
+
+.button {
+  background-color: blue;
+  /* height: 30px; */
+  justify-content: center;
+  padding: 10px;
+  color: white;
 }
